# trms-agents

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/skills/iom-todo-task/: SKILL.md  reference.md
.agents/skills/iom-todo-task-archive/: SKILL.md
.agents/skills/iom-todo-task-archive/references/: AGENTS_ULTRA_COMPACT_TEMPLATE.md
scripts/: analyze_dub_timing.py
src/trns_agents/: __init__.py  batch.py  batch_reset.py  cli.py  models.py  pipeline.py  workdir.py
src/trns_agents/render/: __init__.py  audio.py
src/trns_agents/transcript/: __init__.py
src/trns_agents/translate/: __init__.py  nllb.py
src/trns_agents/tts/: __init__.py
task/: 001-brt-project-vision.md  002-brt-user-requirements.md  003-brt-pipeline-architecture.md  004-brt-tech-stack-evaluation.md  005-brt-constraints-risks.md  006-poc-implementation-scaffold.md  007-session-handoff.md  009-session-handoff-av-sync.md  010-session-handoff-cloud-gemini.md  index.md  log.md  prompt.md
task/archive/2026-06-11/: 005-brt-constraints-risks.md  006-poc-implementation-scaffold.md  007-session-handoff.md  008-dub-audio-continuity.md
task/archive/2026-06-12/: 009-session-handoff-av-sync.md
